<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <Button
        android:id="@+id/decrement_button"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="24dp"
        android:background="@color/editorColorPrimaryDark"
        android:gravity="bottom|center"
        android:onClick="decrementQuantity"
        android:text="@string/decrement_sign"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/QuantityTextView"
        app:layout_constraintTop_toBottomOf="@+id/PriceEditText" />

    <Button
        android:id="@+id/Increment_button"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:background="@color/editorColorPrimaryDark"
        android:gravity="bottom|center"
        android:onClick="incrementQuantity"
        android:selectAllOnFocus="true"
        android:text="@string/increment_sign"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/QuantityTextView"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/PriceEditText" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/get_image" />

    <EditText
        android:id="@+id/PriceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <ImageView
        android:id="@+id/get_image"
        android:layout_width="0dp"
        android:layout_height="183dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_a_photo_24dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="12dp"
        android:clipChildren="true"
        app:layout_constraintEnd_toStartOf="@+id/Increment_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/PriceEditText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/overview"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#237126"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_image" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#237126"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/QuantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="20dp"
        android:text="@string/quantity_value"
        android:textColor="@color/editorColorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/decrement_button"
        app:layout_constraintStart_toEndOf="@+id/Increment_button"
        app:layout_constraintTop_toBottomOf="@+id/PriceEditText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/dollar_sign"
        app:layout_constraintBottom_toBottomOf="@+id/PriceEditText"
        app:layout_constraintEnd_toEndOf="@+id/PriceEditText"
        app:layout_constraintTop_toTopOf="@+id/PriceEditText"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@color/editorColorPrimaryDark"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="Order More From the Supplier "
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>