<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/quantityTxtView"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameTxtView" />

    <TextView
        android:id="@+id/NameTxtView"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="#0B0B0B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buy_imageview"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toEndOf="@+id/NameTxtView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <ImageView
        android:id="@+id/buy_imageview"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="buy"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buy" />

</androidx.constraintlayout.widget.ConstraintLayout>